ros2/log/build_2025-07-05_12-25-03/auv/stderr.log
  File "/home/wiredauv2024/AUV/WIRED24-25/ros2/install/auv/lib/python3.8/site-packages/auv/cam_pub.py", line 51
    return result
    ^
SyntaxError: 'return' outside function

